# pyvue

./: .gitignore  .reset_env.sh  MANIFEST.in  Makefile  README.md  __main__.py  cli.py  pyproject.toml  serve.py  setup.py
.repo/: tests
SwitchPanel/: App.vue  SwitchPanel.vue  load-app.js  serve.py  switch-panel.json
SwitchPanel/components/: Switch.vue
bemplate/: __main__.py
bemplate/payload/: data.yaml
src/pyvue/: __init__.py  cli.py  core.py  local.py
src/pyvue/templates/: base.html  example.html
