[project]
name = "pyvue"
version = "0.2.0"
description = "A template for BEM projects"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
  {name = "Terminal Labs"},
  {email = "solutions@terminallabs.com"}
]
maintainers = [
  {name = "Terminal Labs"},
  {email = "solutions@terminallabs.com"}
]
# pins and reqs
dependencies = [
  "setuptools",
  "click",
  "toml",
  "pytest",
  "pytest-cov",
  # examples:
  # "req-win-pack >= 3.1.0; sys_platform == 'win32'",
  # 'some-pkg @ git+ssh://git@github.com/someorgname/pkg-repo-name@v1.1#egg=some-pkg',
]

# extras
[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov",
]
lint = [
  "black",
  "radon",
  "flake8",
]
ci = [
  "pyvue[test]",
  "pyvue[lint]",
]
dev = [
  "pyvue[ci]",
  "ipython",
  "fastapi",
  "uvicorn",
]

[project.urls]
homepage = "example.com"
documentation = "readthedocs.org"
repository = "https://github.com/predicatestudio/predicate_templates"
changelog = "github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
cli = "pyvue.cli:main"

[build-system]
requires = [
    "toml",
    "setuptools", 
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 150

[tool.bem]
source-directory = "src"
# pins = [
#   "click > 6",
# ]

[tool.bem.codepack]
# framework = "https://github.com/terminal-labs/bash-environment-shelf/archive/refs/heads/master.zip"

[tool.pytest.ini_options]
addopts = "-x -v"
testpaths = [
  "tests"
]

[tool.pytest.pytest-cov]
cov-config = ".coveragerc"
